tests/baselines/reference/privateNameFieldsESNext(target=esnext).errors.txt
privateNameFieldsESNext.ts(8,9): error TS2322: Type 'string' is not assignable to type 'number'.


==== privateNameFieldsESNext.ts (1 errors) ====
    class C {
        a = 123;
        #a = 10;
        c = "hello";
        #b;
        method() {
            console.log(this.#a);
            this.#a = "hello";
            ~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
            console.log(this.#b);
        }
        static #m = "test";
        static #x;
        static test() {
            console.log(this.#m);
            console.log(this.#x = "test");
        }
        #something = () => 1234;
    }
    
    